# routes/index.js
@@ -1,3 +1,4 @@
+const passport = require('passport');
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
@@ -9,5 +10,15 @@ router.get('/', (req, res) => {
 //separate routes for guns and suppressors
 router.use('/guns', require('./guns'));
 router.use('/suppressors', require('./suppressors'));
+
+// log in and log out routes
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
